core/libycp/testsuite/tests/expressions/comma.err
[Parser] tests/expressions/comma.ycp:15 syntax error, unexpected ','
runycp: parser error
