core/libycp/testsuite/tests/expressions/comma.ycp
// comma error test
//
// [Scanner] comma.ycp:15 Parse error: parse error 
//
{
  define void func(string a, string b, string c) ``{
    return;
  }

  string text = "" +
"bla blurb bla blurb bla blurb bla blurb bla blurb bla blurb bla blurb bla blurb
bla blurb blurb bla blurb bla blurb bla blurb bla blurb bla blurb bla blurb bla
blurb bla blurb bla blurb bla blurb bla blurb bla blurb bla blurb bla blurb bla";

  func( "Hello", ,"World");
}
